alioth: overlay: Show memory usage in app info

--- a/overlay-lineage/packages/apps/Settings/res/values/config.xml
+++ b/overlay-lineage/packages/apps/Settings/res/values/config.xml
@@ -15,5 +15,7 @@
     <!-- Whether to show Minimum and Maximum refresh rate in display settings -->
     <bool name="config_show_refresh_rate_controls">true</bool>
     <bool name="config_supports_dynamic_refresh_rate_controls">true</bool>
-    <!-- If using legacy - please use config_show_min_refresh_rate_switch prop -->
+
+	<!-- Whether memory from app_info_settings is available or not. -->
+    <bool name="config_show_app_info_settings_memory">true</bool>
 </resources>
